[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/viejito_plato_listo.gd" type="Script" id=1]
[ext_resource path="res://maps/dinning_room.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/viejito.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/little_chef.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/player_camera.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
position = Vector2( 288, 0 )
script = ExtResource( 1 )

[node name="dinning_room" parent="." instance=ExtResource( 2 )]

[node name="viejito" parent="." instance=ExtResource( 3 )]
position = Vector2( 336, 144 )

[node name="little_chef" parent="." instance=ExtResource( 4 )]
position = Vector2( 960, 192 )

[node name="player_camera" parent="." instance=ExtResource( 5 )]
position = Vector2( 1056, 192 )

[node name="tween" type="Tween" parent="."]

[connection signal="player_entered" from="dinning_room/portal_to_kitchen" to="." method="_on_portal_to_kitchen_player_entered"]
[connection signal="dialog" from="viejito" to="." method="_on_viejito_dialog"]
[connection signal="tween_all_completed" from="tween" to="." method="_on_tween_tween_all_completed"]

[editable path="dinning_room"]
[editable path="dinning_room/table"]
[editable path="dinning_room/table2"]
[editable path="dinning_room/table3"]
